alignment fixed

--- a/css/custom.css
+++ b/css/custom.css
@@ -11,10 +11,10 @@
 }
 
 
-@media (max-width: 700px) {
+@media (min-width: 700px) {
 
 	.main-hero{
-		float:left;
+		float:right;
 	}
 	
 }
@@ -49,11 +49,10 @@ input[type="email"] {
 	padding-right: 50px;
 	text-align:left;
 }
-
 /* strictly for regular ipads and ipad pros*/
 @media (min-width: 768px) and (max-width: 1100px){
 	button.btn {
-			width: 27%;
+			width: 30%;
 			height: 50px;
 			border-radius:1;
 			background-color: #666666;
@@ -74,7 +73,7 @@ input[type="email"] {
 		border-radius:2;
 	}
 	button.btn {
-			width: 25%;
+			width: 30%;
 			height: 50px;
 			border-radius:1;
 			background-color: #666666;
